blogskin/css.css
@charset "UTF-8";

/* Buttons */
#upBtn{
	right: 20px;
}
#darkBtn{
	right: 80px;
	filter: invert(100%);
}
.btns{
	width:50px;
	height:50px;
	border-radius:50%;
	font-size: 2em;
	position: fixed;
	opacity: 0.5;
	text-align : center;
	z-index: 1;
	border: none;
	bottom: 20px;
	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2), 0 6px 4px rgba(0, 0, 0, 0.2);
}
.dark .btns{
	opacity: 0.4;
	box-shadow: 1px 1px 1px 1px rgba(255, 255, 255, 0.2)
}
.btns:hover{
	background-color:#fff;
}

/* font */
@font-face {
	src : url("images/SDSamliphopangcheTTFBasic.ttf");
	font-family : "samlip-basic"
}
@font-face {
	src : url("images/SDSamliphopangcheTTFOutline.ttf");
	font-family : "samlip-outline"
}

/* google translate */
.goog-te-gadget-simple{
	margin-left : 20px;
}

/* image modal */
.modal {
	display: none;
	z-index: 500;
	width: 100%;
	height: 100%;
	position: fixed;
	top: 0;
	left: 0;
	background-color: rgba(0, 0, 0, 0.8);
}
.modalBox {
	position: relative;
	text-align: center;
	top : 50%;
	left : 50%;
	position : sticky;
}
p img:hover{
	cursor: -webkit-zoom-in;
}
/* image modal end */

body.dark{
		background-image: url("./images/darkmoon.jpg");
    background-size: cover;
    background-attachment: fixed;
		background-color : black;
}

/******************** Dark Mode***************/
body {
	transition: all 0.4s;
}
.dark #darkBtn {
	filter : none;
}
.dark #footer{
		border-top : none;
}
.dark .area-view img{
	opacity: 0.9;
}
#tt-body-page,dark .main{
	opacity : 0.9;
}
.dark #footer .box-site button{
	display : none;
}
.dark .article-header{
	background : none !important;
}
	.dark .area-reply .box-content .button-modify{
		background: url(./images/moreSquare.svg) no-repeat;
    background-size: 25px;
	}
	.dark .article-type- .thumbnail
	, .dark .article-type-thumbnail .thumbnail{
		opacity: 0.6;
	}
	.dark .area-reply .list-reply-comment{
		background: none;
	}
	.dark body
	, .dark .area-write .box-write .xe-label > input[type="checkbox"] + .xe-input-helper
, .dark .area-write .box-account input
	, .dark .area-write .box-write .btn_register{
		background-color: #222;
	}
	.dark .area-write .box-textarea textarea {
		background : content-box;
	}
	.dark .area-write .box-account input
	, .dark .area-write .box-textarea textarea:hover{
		border : 1px solid white;
	}
	.dark .header_layer
, .dark .layer_post{
		background : #000;
		border: 1px solid grey;
    opacity: 0.8;
	}
	#tt-body-page.dark .article-view h1
  , #tt-body-page.dark .article-view h2{
		color: grey;
		border-bottom: 2px solid darkgrey;
	}
	.dark .link-icon{
		color : unset;
	}
	.dark .link-icon :hover
	, .dark .area-aside .box-category .tt_category .category_list .link_sub_item:hover
	, .dark .area-aside .box-category .tt_category .link_tit:hover
	, .dark .area-aside .box-category .tt_category .category_list .link_item:hover
	, .dark .article-type-common .title:hover
	, .dark .area-aside .box-profile .button-subscription:hover
	{
		color : white;
	}
	#tt-body-page.dark .article-view hr{
		background-color : grey;
	}
.dark html
, .dark body
, .dark .header .link_logo
, .dark .title
, .dark .link-category
, .dark .area-aside .title-sidebar
, .dark .area-aside .box-recent .list-recent .box-recent
, .dark .area-aside .box-recent .tab-recent li.on a
, .dark .area-aside .box-plugins .tab-sns li.on a
, .dark .area-aside .box-visit .text-total
, .dark .area-aside .box-profile .button-subscription
, .dark .area-aside .box-calendar .inner-calendar .cal_month a, .article-view h1
, .dark .article-view h2
, .dark .article-view h3
, .dark .article-view h4
, .dark .article-view ul li
, .dark .article-view p
, .dark .container_postbtn .postbtn_like
, .dark .article-header .inner-header
, .dark .box-no-search
, .dark .article-related .link-related strong
, .dark .article-reply .box-total a
, #tt-body-page.dark .article-view
, .dark .area-paging .link_num span
, .dark .area-write .box-write .xe-label .xe-label-text
, .dark .inner_header_layer .txt_id
, .dark .menu_toolbar .list_toolbar .link_list
, .dark .layer_post .btn_mark
, .dark .area-aside .box-category .tt_category .link_tit
, .dark .area-aside .box-category .tt_category .category_list .link_item{
		color : darkgray;
	}
	.dark .title-search.title-border
, .dark .area-reply .list-reply-comment {
		border-bottom: 1px solid grey;
	}
.dark .header{
		border-bottom : none !important;
	}
	.dark .area-reply .list-reply-comment{
		border-top : none;
	}
	.dark .util .search {
		background-color: #111;
    padding: 3px;
    margin-top: 15px;
	}
	.dark .util .search input{
		border-bottom : none;
	}
	.dark .layer_post .btn_mark:hover
	, .dark .area-aside .box-profile .button-subscription:hover
	{
		background-color: #444;
	}
.dark .article-type-common .title
, .dark .area-aside .box-profile .text-profile{
	color: #999;	
}
	.dark .menu_toolbar .btn_menu_toolbar, .dark figure[data-ke-type='opengraph'] div.og-image{
		filter: invert(100%);
	}
	.dark .area-aside .box-profile{
		border: 2px solid dimgrey;
	}
	.dark .title-search span
	, .dark .box-calendar .cal_click
	, .dark .article-reply .box-total span 
	, .dark .area-aside .box-category .tt_category .category_list .link_sub_item.selected
	, .dark .area-aside .box-category .tt_category .category_list .link_item.selected
	{
		color : darkseagreen;
	}
	.dark figure[data-ke-type='opengraph'] a
, #tt-body-page.dark figure[data-ke-type='opengraph'] a{
		border: 1px solid dimgrey;
	}
	.dark .article-view a:hover{
		opacity : 1;
	}
	#tt-body-page.dark .article-view blockquote{
		border-left: .25em solid grey;
	}
#tt-body-page.dark .article-view pre
,#tt-body-page.dark .article-view .highlight pre{
		filter: invert(100%) !important;
		background-color : #ccc !important;		
	}
 .dark .paging-more
, .dark .article-page ul li:nth-child(2)
, .dark .article-reply .box-total a
, .dark .area-reply .box-content .box-meta strong a{
		color : ghostwhite !important;
	}
	#tt-body-page.dark .article-view a:hover {
    text-decoration: none !important;
    color: #79abe4  !important;
	}
/* ... */

